--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,14 @@ span{
 
 
 @media screen and (max-width : 748px){
+    .navbar .logo{
+        font-size: 1rem; 
+        text-align: center;
+    }
+    .navs ul li a{
+        font-size: .7rem;
+        margin-right : .1rem;
+    }
     .home-heading .p1{
         font-size: .9rem;
     }
@@ -152,15 +160,21 @@ span{
 }
 
 @media screen and (max-width: 480px) {
+    .navbar{
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
     .navbar .logo{
-        font-size: 1rem; 
-        text-align: center;
+        font-size: 2.5rem; 
     }
     .navs{
         display: none;
     }
+    .t{
+        display: none;
+    }
     .home-page{
-        margin: 1rem;
         display: block;
         align-items: center;
         justify-content: center;
@@ -169,16 +183,19 @@ span{
         display: block;
         justify-content: center;
         text-align: center;
+        margin-top: 4rem;
     }
 
     .home-image{
         display: block;
         align-items: center;
         justify-content: center;
+        margin-top: 2.6rem;
     }
-        
+
     .home-image img{
-        height: 10rem;
-        width: 10rem;
+        height: 15rem;
+        width: 15rem;
     }
+
 }
